[dq8] Fixinglatex typos and mistaken alignments across the file.

--- a/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
+++ b/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
@@ -380,7 +380,6 @@
     "\n",
     "Note that the robot was unable to reach the desired task-space translation due to the joint limits, as shown by the black lines representing the joint limits. This is exactly what we wanted: a controller that will get as close as possible to the target, while maintaning the robot's joint limits.\n",
     "\n",
-    "<a name=\"H_4A689E93\"></a>\n",
     "## Vector-field inequalities: task-space collision avoidance\n",
     "\n",
     "We have just now seen how to use linear inequalities to prevent the robot from trespassing its joint limits. The joint limits are one of the few applications of joint-space constraints. In most cases, we are interested in having task-space constraints. That is, constraints that are definied at the task space. The difficulty in doing so is writting the task-space constraint as linear constraints in joint space.\n",
@@ -394,7 +393,6 @@
     "\n",
     "The VFIs are described in detail in [[1]](https://arxiv.org/ftp/arxiv/papers/1804/1804.11270.pdf), so to simplify the discussion for this lesson, consider the (signed) distance $d\\triangleq d\\left(q\\right)\\in \\mathbb{R}$ to be the relation between some entity in the robot, such as a point, line, or plane, and another entity in the workspace.\n",
     "\n",
-    "<a name=\"H_6C97B200\"></a>\n",
     "### Keeping the robot entity outside of a restricted zone\n",
     "\n",
     "Consider the situation of keeping the robot entity outside of a restricted zone. We define the distance error in such way that the distance error is positive whenever the robot is outside of the restricted zone, zero when at the border, and negative when inside the restricted zone. The distance error is then $\\tilde{d} \\triangleq d-d_{\\textrm{safe}}$ , where $d_{\\textrm{safe}} \\in \\mathbb{R}$ is the safe distance, that we suppose to be constant in time in this lesson.\n",
@@ -430,33 +428,30 @@
     "\n",
     "\n",
     "$$-J_d \\dot{q} \\le \\eta_d \\tilde{d} .$$\n",
-    "<a name=\"H_B67D71BB\"></a>\n",
+    "\n",
     "### Keeping the robot entity inside of a safe zone\n",
-    "<a name=\"H_5C1C0505\"></a>\n",
+    "\n",
     "\n",
     "The reasoning is basically the same of the restricted zone case, but the distance error is redefined as $\\tilde{d} \\triangleq d_{\\textrm{safe}} -d$ . This causes the linear constraint to change to\n",
     "\n",
     "\n",
     "$$J_d \\dot{q} \\le \\eta_d \\tilde{d} .$$\n",
-    "<a name=\"H_B29A4585\"></a>\n",
+    "\n",
     "### Square distances instead of distances\n",
-    "<a name=\"H_1955BD55\"></a>\n",
+    "\n",
     "\n",
     "Calculating the distance Jacobians of the distance of some primitives introduces algorithmic singularities, as shown in [[2]](https://arxiv.org/pdf/1804.03883).  To handle that problem, we often calculate the Jacobian of the <u>***square***</u> distance instead [[1]](https://arxiv.org/ftp/arxiv/papers/1804/1804.11270.pdf). The notation for square distances is the upper-case letter $D$ .\n",
     "\n",
     "\n",
     "[[2]](https://arxiv.org/pdf/1804.03883) Marinho, M. M; Adorno, B. V; Harada, K.;  and Mitsuishi, M. Active Constraints using Vector Field Inequalities for Surgical Robots. In *2018 IEEE International Conference on Robotics and Automation (ICRA)*, pages 5364–5371, May 2018.\n",
     "\n",
-    "<a name=\"H_32955C9F\"></a>\n",
+    "\n",
     "### Distance Jacobians\n",
     "\n",
     "In lesson 4, we learned about distance functions using dual quaternions and in lesson 6 you learned how to calculate a few Jacobians. Using that knowledge, it is easy to calculate the distance Jacobians related to the distance functions.\n",
     "\n",
-    "<a name=\"H_4F9EEBA8\"></a>\n",
-    "\n",
     "We will go through how to calculate all the distance Jacobians described in [[1]](https://arxiv.org/ftp/arxiv/papers/1804/1804.11270.pdf) using DQ Robotics, but we will skip most of the mathematical derivations because they are already described in detail in the paper.\n",
     "\n",
-    "<a name=\"H_FB89938D\"></a>\n",
     "#### Preliminaries\n",
     "\n",
     "To calculate the distance Jacobian, the following two definitions are useful.\n",
@@ -475,7 +470,6 @@
     "\n",
     "Two new task Jacobians are also needed. Similarly to how we obtained the translation, rotation, and pose Jacobians, we can also obtain the Jacobians related to lines and planes in the robot.\n",
     "\n",
-    "<a name=\"H_685CD1F0\"></a>\n",
     "#### Line Jacobian\n",
     "\n",
     "Suppose that we want the Jacobian related to line with direction $l_v \\in {\\mathbb{H}}_p \\cap {\\mathbb{S}}^3$ that passes through the end-effector. The line will be given by [[1, Eq. (24)]](https://arxiv.org/ftp/arxiv/papers/1804/1804.11270.pdf)\n",
@@ -486,7 +480,7 @@
     "Given our definition of line, we have the following [[1, Eq. (28)]](https://arxiv.org/ftp/arxiv/papers/1804/1804.11270.pdf)\n",
     "\n",
     "\n",
-    " ${\\textrm{vec}}_8 {\\dot{\\underline{l} } }_v =J_{l_v } \\dot{q}$ ,\n",
+    "$${\\textrm{vec}}_8 {\\dot{\\underline{l} } }_v =J_{l_v } \\dot{q}.$$\n",
     "\n",
     "\n",
     "Using DQ Robotics, we can obtain the line Jacobian as follows\n"
