[dq8] Fixing some equations that should have been in display mode.

--- a/dqrobotics/lesson7/lesson_dq7_robot_control_basics_part3.ipynb
+++ b/dqrobotics/lesson7/lesson_dq7_robot_control_basics_part3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "np.int64(2)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "np.int64(3)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -509,11 +509,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "U, s, Vh = np.linalg.svd(A, full_matrices = True)\n",
+    "U, s, Vh = np.linalg.svd(A)\n",
     "V = Vh.T # numpy returns the hermitian V"
    ]
   },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "       [-1.94289029e-16, -3.33066907e-16,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "         1.00000000e+00]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "array([6.83935954, 2.09392491, 0.91577269])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
     "With these properties, a right pseudo-inverse can be defined for any matrix for which all singular values are non-zero. The right pseudo-inverse is\n",
     "\n",
     "\n",
-    " $A^{\\dagger} \\triangleq V{{{\\Sigma }}}^{\\textrm{inv}} U^T$ .\n",
+    "$$A^{\\dagger} \\triangleq V{{{\\Sigma }}}^{\\textrm{inv}} U^T,$$\n",
     "\n",
     "\n",
     "where ${{{\\Sigma }}}^{\\textrm{inv}}$ is a compatible matrix where we use the reciprocal of the singular values. For example, for a square matrix we have\n",
@@ -647,12 +647,12 @@
     "and for a rectangular matrix\n",
     "\n",
     "\n",
-    "$${{{\\Sigma }}}^{inv} \\triangleq \\left\\lbrack \\begin{array}{cccc} \\frac{1}{\\sigma_1 } & 0 & \\cdots  & 0\\\\ 0 & \\frac{1}{\\sigma_2 } & \\ldots & 0\\\\ 0 & \\vdots  & \\ddots  & 0\\\\ 0 & 0 & 0 & \\frac{1}{\\sigma_m }\\\\ 0 & 0 & 0 & 0 \\end{array}\\right\\rbrack$$"
+    "$${{{\\Sigma }}}^{inv} \\triangleq \\left\\lbrack \\begin{array}{cccc} \\frac{1}{\\sigma_1 } & 0 & \\cdots  & 0\\\\ 0 & \\frac{1}{\\sigma_2 } & \\ldots & 0\\\\ 0 & \\vdots  & \\ddots  & 0\\\\ 0 & 0 & 0 & \\frac{1}{\\sigma_m }\\\\ 0 & 0 & 0 & 0 \\end{array}\\right\\rbrack.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "       [-2.37657116e-16, -6.24500451e-16,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "np.int64(1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
        "array([[1.]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
        "       [-2.58473798e-16, -6.24500451e-16,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
        "np.int64(2)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
        "np.int64(1)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "np.float64(14.999999999999986)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1111,7 @@
        "np.float64(382336.47056177165)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1146,7 @@
        "np.float64(3823529395.294118)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
        "       [4.99994097e-01, 6.24984841e-06, 4.99994097e-01]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
