[dq] Adding prints whenever needed.

--- a/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
+++ b/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l1=i_"
+    "l1=i_\n",
+    "print(f\"l1 = {l1}\")"
    ]
   },
   {
@@ -164,9 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p_l1 = 0\n"
+     ]
+    }
+   ],
    "source": [
     "p_l1 = DQ([0]) # We use the DQ() constructor so that Python knows its a DQ, not a real number.\n",
     "print(f\"p_l1 = {p_l1}\")"
@@ -185,9 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m1 = 0\n"
+     ]
+    }
+   ],
    "source": [
     "m1 = cross(p_l1,l1)\n",
     "print(f\"m1 = {m1}\")"
@@ -206,9 +223,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l1_dq = 1i\n"
+     ]
+    }
+   ],
    "source": [
     "l1_dq = l1 + E_*m1\n",
     "print(f\"l1_dq = {l1_dq}\")"
@@ -226,18 +251,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_pure(l1_dq)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_unit(l1_dq)"
    ]
@@ -252,9 +299,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_line(l1_dq)"
    ]
@@ -271,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +389,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_pi1 = k_"
+    "n_pi1 = k_\n",
+    "print(f\"n_pi1 = {n_pi1}\")"
    ]
   },
   {
@@ -352,7 +411,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_pi1 = DQ([0])  # We use the DQ() constructor so that Python knows its a DQ, not a real number."
+    "p_pi1 = DQ([0])  # We use the DQ() constructor so that Python knows its a DQ, not a real number.\n",
+    "print(f\"p_pi1 = {p_pi1}\")"
    ]
   },
   {
@@ -372,7 +432,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d_pi1 = dot(p_pi1, n_pi1)"
+    "d_pi1 = dot(p_pi1, n_pi1)\n",
+    "print(f\"d_pi1 = {d_pi1}\")"
    ]
   },
   {
@@ -392,7 +453,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi1 = n_pi1 + E_*d_pi1"
+    "pi1 = n_pi1 + E_*d_pi1\n",
+    "print(f\"pi1 = {pi1}\")"
    ]
   },
   {
@@ -408,27 +470,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_unit(pi1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_pure(P(pi1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_real(D(pi1))"
    ]
@@ -444,9 +539,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "is_plane(pi1)"
    ]
@@ -463,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,9 +604,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_p1_p2 = 1.732051\n"
+     ]
+    }
+   ],
    "source": [
     "p1 = i_+j_\n",
     "p2 = k_\n",
@@ -525,9 +639,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_p_l1 = 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Point coordinates\n",
     "p = i_+j_\n",
@@ -551,9 +673,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_p_l1 = 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "from dqrobotics.utils import DQ_Geometry\n",
     "\n",
@@ -586,9 +716,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_p_pi1 = 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Point coordinates\n",
     "p = k_\n",
@@ -613,9 +751,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_p_pi1 = 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "from dqrobotics.utils import DQ_Geometry\n",
     "\n",
@@ -659,7 +805,9 @@
     "m2 = cross(p_l2,k_)\n",
     "l2_dq = l2 + E_*m2\n",
     "# Get the distance\n",
-    "d_l1_l2 = sqrt(DQ_Geometry.line_to_line_squared_distance(l1_dq,l2_dq))"
+    "d_l1_l2 = sqrt(DQ_Geometry.line_to_line_squared_distance(l1_dq,l2_dq))\n",
+    "\n",
+    "print(f\"d_l1_l2 = {d_l1_l2}\")"
    ]
   },
   {
@@ -673,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
