--- a/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
+++ b/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 =  - 10 + E*(239)\n"
+     ]
+    }
+   ],
    "source": [
     "d1 = 10 - 239*E_\n",
     "print(f\"d1 = {d1}\")"
@@ -100,9 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "E*(1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "E_"
    ]
@@ -111,9 +130,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "E_*E_"
+    "E_ * E_"
    ]
   },
   {
@@ -136,9 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d1 =  - 10 + E*(239)\n"
+     ]
+    }
+   ],
    "source": [
     "d1 = 10 - 239*E_\n",
     "print(f\"d1 = {d1}\")"
@@ -146,9 +184,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d2 = 55 + E*(32)\n"
+     ]
+    }
+   ],
    "source": [
     "d2 = 55 + 32*E_\n",
     "print(f\"d2 = {d2}\")"
@@ -168,18 +214,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45 + E*(271)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "d1+d2"
+    "d1 + d2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " - 65 + E*(207)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "d1-d2"
+    "d1 - d2"
    ]
   },
   {
@@ -199,9 +267,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " - 550 + E*(12825)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "d1*d2"
+    "d1 * d2"
    ]
   },
   {
@@ -219,9 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " - 10"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "P(d1)"
    ]
@@ -241,9 +331,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "239"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "D(d1)"
    ]
@@ -276,9 +377,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h1 = 5 + 6i + 7j + 8k + E*(9 + 15i + 7j + 8k)\n"
+     ]
+    }
+   ],
    "source": [
     "h1 = 5 + 6*i_ + 7*j_ + 8*k_ + E_*(9 + 15*i_ + 7*j_ + 8*k_)\n",
     "print(f\"h1 = {h1}\")"
@@ -296,9 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h1 = 5 + 6i + 7j + 8k + E*(9 + 15i + 7j + 8k)\n"
+     ]
+    }
+   ],
    "source": [
     "h1 = 5 + 6*i_ + 7*j_ + 8*k_ + E_*(9 + 15*i_ + 7*j_ + 8*k_)\n",
     "print(f\"h1 = {h1}\")"
@@ -306,9 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h2 =  - 25 + 1k + E*(7j + 8k)\n"
+     ]
+    }
+   ],
    "source": [
     "h2 = -25 + 1*k_ + E_*( 7*j_ + 8*k_)\n",
     "print(f\"h2 = {h2}\")"
@@ -328,18 +453,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " - 20 + 6i + 7j + 9k + E*(9 + 15i + 14j + 16k)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "h1+h2"
+    "h1 + h2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30 + 6i + 7j + 7k + E*(9 + 15i)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "h1-h2"
+    "h1 - h2"
    ]
   },
   {
@@ -356,9 +503,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " - 133 - 143i - 181j - 195k + E*( - 346 - 368i - 203j - 109k)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "h1*h2"
+    "h1 * h2"
    ]
   },
   {
@@ -378,7 +536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h3 = h1*h2"
+    "h3 = h1 * h2\n",
+    "print(f\"h3 = {h3}\")"
    ]
   },
   {
@@ -387,14 +546,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h4 = h2*h1"
+    "h4 = h2 * h1\n",
+    "print(f\"h4 = {h4}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h1*h2 is not equal to h2*h1\n"
+     ]
+    }
+   ],
    "source": [
     "if h3==h4:\n",
     "    print('h1*h2 is equal to h2*h1')\n",
@@ -417,9 +585,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5 - 6i - 7j - 8k + E*(9 - 15i - 7j - 8k)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conj(h1)"
    ]
@@ -437,9 +616,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.190906 + E*(18.800831)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "norm(h1)"
    ]
@@ -456,9 +646,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5 + E*(9)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Re(h1)"
    ]
@@ -478,9 +679,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6i + 7j + 8k + E*(15i + 7j + 8k)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Im(h1)"
    ]
@@ -500,9 +712,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5 + 6i + 7j + 8k"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "P(h1)"
    ]
@@ -519,9 +742,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9 + 15i + 7j + 8k"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "D(h1)"
    ]
@@ -541,9 +775,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.,  7.,  8., 15.,  7.,  8.])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vec6(h1)"
    ]
@@ -563,9 +808,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5.,  6.,  7.,  8.,  9., 15.,  7.,  8.])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vec8(h1)"
    ]
@@ -585,27 +841,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-133., -143., -181., -195., -346., -368., -203., -109.])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vec8(h1*h2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-125.,   -0.,   -0.,   -8.,    0.,    0.,    0.,    0.],\n",
+       "       [-150.,    0.,   -0.,    7.,    0.,    0.,    0.,    0.],\n",
+       "       [-175.,    0.,    0.,   -6.,    0.,    0.,    0.,    0.],\n",
+       "       [-200.,   -0.,    0.,    5.,    0.,    0.,    0.,    0.],\n",
+       "       [-225.,   -0.,   -0.,   -8.,    0.,   -0.,  -49.,  -64.],\n",
+       "       [-375.,    0.,   -0.,    7.,    0.,    0.,  -56.,   56.],\n",
+       "       [-175.,    0.,    0.,  -15.,    0.,    0.,   35.,  -48.],\n",
+       "       [-200.,   -0.,    0.,    9.,    0.,   -0.,   42.,   40.]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "hamiplus8(h1)*vec8(h2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-125.,   -0.,   -0.,   -8.,    0.,    0.,    0.,    0.],\n",
+       "       [   0., -150.,    7.,   -0.,    0.,    0.,    0.,    0.],\n",
+       "       [   0.,   -6., -175.,    0.,    0.,    0.,    0.,    0.],\n",
+       "       [   5.,    0.,   -0., -200.,    0.,    0.,    0.,    0.],\n",
+       "       [   0.,   -0.,  -49.,  -64., -225.,   -0.,   -0.,   -8.],\n",
+       "       [   0.,    0.,   56.,  -56.,    0., -375.,    7.,   -0.],\n",
+       "       [  35.,  -48.,    0.,    0.,    0.,  -15., -175.,    0.],\n",
+       "       [  40.,   42.,   -0.,    0.,    9.,    0.,   -0., -200.]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "haminus8(h2)*vec8(h1)"
    ]
@@ -647,11 +950,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t1 = 1j\n"
+     ]
+    }
+   ],
    "source": [
-    "t1 = j_"
+    "t1 = j_\n",
+    "print(f\"t1 = {t1}\")"
    ]
   },
   {
@@ -667,11 +979,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r1 = 0.707107 + 0.707107i\n"
+     ]
+    }
+   ],
    "source": [
-    "r1 = cos(pi/4) + i_*sin(pi/4)"
+    "r1 = cos(pi/4) + i_*sin(pi/4)\n",
+    "print(f\"r1 = {r1}\")"
    ]
   },
   {
@@ -687,11 +1008,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1 = 0.707107 + 0.707107i + E*(0.353553j - 0.353553k)\n"
+     ]
+    }
+   ],
    "source": [
-    "x1 = r1 + 0.5*E_*t1*r1"
+    "x1 = r1 + 0.5*E_*t1*r1\n",
+    "print(f\"x1 = {x1}\")"
    ]
   },
   {
@@ -704,9 +1034,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "norm(x1)"
    ]
@@ -741,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,16 +1123,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential pose transformations\n"
+     ]
+    }
+   ],
    "source": [
     "print('Sequential pose transformations')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,9 +1193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.995185 + 0.098017k + E*(0.049009 + 0.995185i - 0.098017j - 0.497592k)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x3"
    ]
@@ -855,9 +1215,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "x3*conj(x3)"
+    "x3 * conj(x3)"
    ]
   },
   {
@@ -872,9 +1243,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.995185 + 0.098017k"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rotation(x3)"
    ]
@@ -891,9 +1273,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2i - 1k"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "translation(x3)"
    ]
@@ -909,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
