[dq8] Adding prints so that the user can see the Jacobians.

--- a/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
+++ b/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
@@ -283,7 +283,10 @@
    "source": [
     "# Joint limits\n",
     "q_minus = -(pi/8) * np.ones(7)\n",
-    "q_plus  =  (pi/8) * np.ones(7)"
+    "q_plus  =  (pi/8) * np.ones(7)\n",
+    "\n",
+    "print(f\"q_minus = {q_minus}\")\n",
+    "print(f\"q_plus = {q_plus}\")"
    ]
   },
   {
@@ -500,7 +503,9 @@
     "lv = k_\n",
     "\n",
     "# Get the line Jacobian\n",
-    "Jlv = DQ_Kinematics.line_jacobian(Jx, x, lv)"
+    "Jlv = DQ_Kinematics.line_jacobian(Jx, x, lv)\n",
+    "\n",
+    "print(f\"Jlv = {Jlv}\")"
    ]
   },
   {
@@ -549,7 +554,9 @@
     "piv = k_\n",
     "\n",
     "# Get the line Jacobian\n",
-    "Jpiv = DQ_Kinematics.plane_jacobian(Jx, x, piv)"
+    "Jpiv = DQ_Kinematics.plane_jacobian(Jx, x, piv)\n",
+    "\n",
+    "print(f\"Jpiv = {Jpiv}\")"
    ]
   },
   {
@@ -596,7 +603,9 @@
     "Jt = DQ_Kinematics.translation_jacobian(Jx, x)\n",
     "\n",
     "# Get the distance Jacobian\n",
-    "Jp_p = DQ_Kinematics.point_to_point_distance_jacobian(Jt, t, p)"
+    "Jp_p = DQ_Kinematics.point_to_point_distance_jacobian(Jt, t, p)\n",
+    "\n",
+    "print(f\"Jp_p = {Jp_p}\")"
    ]
   },
   {
@@ -637,7 +646,9 @@
     "Jt = DQ_Kinematics.translation_jacobian(Jx, x)\n",
     "\n",
     "# Get the distance Jacobian\n",
-    "Jt_l = DQ_Kinematics.point_to_line_distance_jacobian(Jt, t, l_dq)"
+    "Jt_l = DQ_Kinematics.point_to_line_distance_jacobian(Jt, t, l_dq)\n",
+    "\n",
+    "print(f\"Jt_l = {Jt_l}\")"
    ]
   },
   {
@@ -686,7 +697,9 @@
     "lv_dq = Ad(r,lv) + E_*cross(t, Ad(r,lv))\n",
     "\n",
     "# Get the distance Jacobian\n",
-    "Jlv_p = DQ_Kinematics.line_to_point_distance_jacobian(Jl, lv_dq, p)"
+    "Jlv_p = DQ_Kinematics.line_to_point_distance_jacobian(Jl, lv_dq, p)\n",
+    "\n",
+    "print(f\"Jlv_p = {Jlv_p}\")"
    ]
   },
   {
@@ -728,7 +741,9 @@
     "lv_dq = lv + E_*cross(t, lv); #  (in the point-of-view of the base)\n",
     "\n",
     "# Get the distance Jacobian\n",
-    "Jlv_p = DQ_Kinematics.line_to_line_distance_jacobian(Jl, lv_dq, l_dq)"
+    "Jlv_p = DQ_Kinematics.line_to_line_distance_jacobian(Jl, lv_dq, l_dq)\n",
+    "\n",
+    "print(f\"Jlv_p = {Jlv_p}\")"
    ]
   },
   {
@@ -769,7 +784,9 @@
     "Jt = DQ_Kinematics.translation_jacobian(Jx, x)\n",
     "\n",
     "# Get the distance Jacobian\n",
-    "Jt_pi = DQ_Kinematics.point_to_plane_distance_jacobian(Jt, t, pi_w)"
+    "Jt_pi = DQ_Kinematics.point_to_plane_distance_jacobian(Jt, t, pi_w)\n",
+    "\n",
+    "print(f\"Jt_pi = {Jt_pi}\")"
    ]
   },
   {
@@ -817,7 +834,9 @@
     "Jpi = DQ_Kinematics.plane_jacobian(Jx, x, n_pi_v_e)\n",
     "\n",
     "# Get the distance Jacobian\n",
-    "Jpi_p = DQ_Kinematics.plane_to_point_distance_jacobian(Jpi, p)"
+    "Jpi_p = DQ_Kinematics.plane_to_point_distance_jacobian(Jpi, p)\n",
+    "\n",
+    "print(f\"Jpi_p = {Jpi_p}\")"
    ]
   },
   {
