[dq2] Removing the read font for homework and bonus homework.

--- a/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
+++ b/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
@@ -1408,8 +1408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"T_98D69E51\"></a>\n",
-    "# <span style=\"color:rgb(213,80,0)\">Homework</span>\n"
+    "# Homework"
    ]
   },
   {
@@ -1426,8 +1425,8 @@
     "5. Calculate the result of the sequential rotation of the neutral reference-frame by $r_1$ , followed by $r_2$ , followed by $r_3$ , and store it in ${\\mathit{\\mathbf{r}}}_4$ . Plot ${\\mathit{\\mathbf{r}}}_4$ .\n",
     "6. Find the reverse rotation of ${\\mathit{\\mathbf{r}}}_4$ and store it in ${\\mathit{\\mathbf{r}}}_5$ .\n",
     "7. Rotate ${\\mathit{\\mathbf{r}}}_5$ by ${360}^{\\circ \\;}$ about the x-axis and store it in ${\\mathit{\\mathbf{r}}}_6$ . Is ${\\mathit{\\mathbf{r}}}_5 =-{\\mathit{\\mathbf{r}}}_6$ ? Plot ${\\mathit{\\mathbf{r}}}_5$ and ${\\mathit{\\mathbf{r}}}_6$ to confirm that they represent the same rotation.\n",
-    "<a name=\"T_B6A9D8F3\"></a>\n",
-    "# <span style=\"color:rgb(213,80,0)\">Bonus Homework</span>\n",
+    "\n",
+    "# Bonus Homework\n",
     "1.  What is the general form of the quaternion multiplication? Multiply ${\\mathit{\\mathbf{h}}}_1 =a_1 +b_1 \\hat{\\;\\imath \\;} +c_1 \\hat{\\;\\jmath \\;} +d_1 \\hat{\\;k}$ and ${\\mathit{\\mathbf{h}}}_2 =a_2 +b_2 \\hat{\\;\\imath \\;} +c_2 \\hat{\\;\\jmath \\;} +d_2 \\hat{\\;k}$ on pen and paper and find ${\\mathit{\\mathbf{h}}}_3 =a_3 +b_3 \\hat{\\;\\imath \\;} +c_3 \\hat{\\;\\jmath \\;} +d_3 \\hat{\\;k}$ .\n",
     "2. What is the general form of the quaternion norm? Simplify $\\sqrt{\\;{\\mathit{\\mathbf{h}}}_1 {\\mathit{\\mathbf{h}}}_1^* }$ on pen and paper.\n",
     "3. Show that every unit quaternion, written as $\\mathit{\\mathbf{r}}=\\cos \\left(\\frac{\\phi }{2}\\right)+\\textrm{vsin}\\left(\\frac{\\;\\phi \\;}{2}\\right)$ , has unit norm. Do that on pen and paper.\n"
