Prepending all lessons with DQ, unifying latex directives across files, lesson dq5 with adjusted text.

--- a/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
+++ b/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
@@ -25,13 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Basics\n",
+    "# DQ1 Python Basics\n",
     "\n",
     "## Introduction\n",
     "\n",
     "Before we begin learning DQ Robotics, it is important to understand some basics of Python programming.\n",
     "\n",
-    "<a name=\"H_CC3F55EF\"></a>\n",
     "## Python scripts\n",
     "\n",
     "This is a Jupyter notebook with extension `.ipynb`. In general, Python scripts will have the extension `.py`.\n",
