--- a/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
+++ b/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Quaternion Basics using DQ Robotics\n",
+    "# DQ2 Quaternion Basics using DQ Robotics\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -51,9 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "The current release version of <b>dqrobotics</b> does not have a plot function. Temporarily we will use the package <b>dqrobotics-pyplot</b> for it.\n",
-    "</div>"
+    "```{admonition}\n",
+    "The current release version of dqrobotics does not have a plot function. Temporarily we will use the package dqrobotics-pyplot for it.\n",
+    "```"
    ]
   },
   {
