--- a/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
+++ b/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dual Quaternion Basics using DQ Robotics\n",
+    "# DQ3 Dual Quaternion Basics using DQ Robotics\n",
     "\n",
     "## Introduction\n",
     "\n",
