--- a/dqrobotics/lesson7/lesson_dq7_robot_control_basics_part3.ipynb
+++ b/dqrobotics/lesson7/lesson_dq7_robot_control_basics_part3.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Robot Control Basics using DQ Robotics - Part 3\n",
+    "# DQ7 Robot Control Basics using DQ Robotics - Part 3\n",
     "\n",
     "## Introduction\n",
     "\n",
