--- a/lesson3_tutorial.ipynb
+++ b/lesson3_tutorial.ipynb
@@ -31,11 +31,7 @@
    },
    "source": [
     "\\providecommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "\\(\n",
-    "   \\def\\myvec#1{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "   \\def\\mymatrix#1{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "\\)"
+    "\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}"
    ]
   },
   {
