--- a/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
+++ b/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dual Quaternion Basics using DQ Robotics - Part 2\n",
+    "# DQ4 Dual Quaternion Basics using DQ Robotics - Part 2\n",
     "\n",
     "## Introduction\n",
     "\n",
