--- a/dqrobotics/lesson6/lesson_dq6_robot_control_basics_part2.ipynb
+++ b/dqrobotics/lesson6/lesson_dq6_robot_control_basics_part2.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Robot Control Basics using DQ Robotics - Part 2\n",
+    "# DQ6 Robot Control Basics using DQ Robotics - Part 2\n",
     "\n",
     "## Introduction\n",
     "\n",
