--- a/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
+++ b/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optimization-based Robot Control\n",
+    "# DQ8 Optimization-based Robot Control\n",
     "\n",
     "## Introduction\n",
     "\n",
