[dq] Added where to report an issue to each file.

--- a/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
+++ b/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
@@ -27,6 +27,9 @@
    "source": [
     "# DQ1 Python Basics\n",
     "\n",
+    "## I found an issue\n",
+    "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "Before we begin learning DQ Robotics, it is important to understand some basics of Python programming.\n",
