--- a/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
+++ b/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
@@ -25,8 +25,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "# DQ2 Quaternion Basics using DQ Robotics\n",
+    "\n",
+    "## I found an issue\n",
+    "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 651,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 655,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 656,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 657,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 663,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 664,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 665,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 666,
    "metadata": {},
    "outputs": [
     {
