--- a/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
+++ b/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
@@ -27,6 +27,9 @@
    "source": [
     "# DQ3 Dual Quaternion Basics using DQ Robotics\n",
     "\n",
+    "## I found an issue\n",
+    "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "Before introducing dual quaternions, it is common practice to introduce the concept of dual numbers. Let us start with that.\n",
@@ -1174,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
