--- a/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
+++ b/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
@@ -27,6 +27,9 @@
    "source": [
     "# DQ4 Dual Quaternion Basics using DQ Robotics - Part 2\n",
     "\n",
+    "## I found an issue\n",
+    "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "The last lesson introduced dual quaternions, some basic dual quaternion operations; and, most importantly, unit dual quaternions and their ability to represent rigid body motion.\n",
