[dq1] Fixed multiplication operation string to not be programming-like.

--- a/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
+++ b/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
@@ -241,7 +241,7 @@
     "<a name=\"H_BC234F99\"></a>\n",
     "### Multiplication\n",
     "\n",
-    "$$a_3 =a_1 *a_2$$"
+    "$$a_3 =a_{1}a_{2}$$"
    ]
   },
   {
@@ -473,9 +473,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"T_FCCB39BE\"></a>\n",
-    "# <span style=\"color:rgb(213,80,0)\">Homework</span>\n",
-    "1.  Create a Python script called [python_basics_homework.py] and, in the same script, do 2-10.\n",
+    "# Homework\n",
+    "1. Create a Python script called [python_basics_homework.py] and, in the same script, do 2-10.\n",
     "2. Define the real numbers $a_1 =123$ and $a_2 =321$\n",
     "3. Calculate and display $a_3 =a_1 +a_2$\n",
     "4. Calculate and display $a_3 =a_1 *a_2$\n",
