[dq_all] Adding pip install  in the same line.

--- a/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
+++ b/dqrobotics/lesson4/lesson_dq4_dual_quaternion_basics_part2.ipynb
@@ -40,15 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%pip install dqrobotics\n",
-    "%pip install dqrobotics --break-system-packages\n",
-    "%pip install dqrobotics-pyplot\n",
-    "%pip install dqrobotics-pyplot --break-system-packages"
+    "%pip install dqrobotics dqrobotics-pyplot\n",
+    "%pip install dqrobotics dqrobotics-pyplot --break-system-packages"
    ]
   },
   {
