--- a/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
+++ b/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
@@ -38,15 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 648,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%pip install dqrobotics\n",
-    "%pip install dqrobotics --break-system-packages\n",
-    "%pip install dqrobotics-pyplot\n",
-    "%pip install dqrobotics-pyplot --break-system-packages"
+    "%pip install dqrobotics dqrobotics-pyplot\n",
+    "%pip install dqrobotics dqrobotics-pyplot --break-system-packages"
    ]
   },
   {
